[package]
name = "streebog"
version = "0.1.0"
authors = ["dmitry dulesov <dmitry.dulesov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.bench]
lto = true
overflow-checks = false

[dev-dependencies]
hex = "0.4"
criterion = "0.3"

[[bench]]
name = "hash"
harness = false